# Literature-Analyzer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: design_spec.md  developer_guide.md  semantic_space_analysis_guide.md  user_guide.md
examples/: semantic_space_analysis_example.py
src/literature_analyzer/: __init__.py  ai_models.py  data_processing.py  nlp_analysis.py  report_generator.py  semantic_space_analyzer.py  session_manager.py  topic_model_factory.py  visualization.py
